alignment issues solved

--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -26,11 +26,11 @@
 
     .imagebox {
       background-size: cover;
-      height: 20rem;
+      height: 20em;
       z-index: 2px;
-      border-radius: 40px;
-      margin: 10px;
-      margin-top: 100px;
+      border-radius: 15px;
+      margin:5em;
+      margin-right: 0;
     }
 
     .image1 {
@@ -38,7 +38,9 @@
     }
 
     .image2 {
-      background-image: url(../media/PngItem_2430274.png);
+      background-image: url(../media/drone-img.jpg);
+      background-position: center;
+  background-repeat: no-repeat;
     }
 
     .image3 {
